tests/errors/syntax/if_without_else/source.wren
import "ifj25" for Ifj
class Program {
    static main() {
        if (true)
            Ifj.write("This is true.\n")
        else
        Ifj.write("This is false.\n")
    }
}
